Bug 119570 - Sidebar: Keyboard navigation from tab bar to deck contents hides focus when deck is in collapsed state
Summary: Sidebar: Keyboard navigation from tab bar to deck contents hides focus when d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords: accessibility, bibisected, bisected
Depends on:
Blocks: Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2018-08-28 17:28 UTC by Jim Raykowski
Modified: 2019-03-15 08:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-08-28 17:28:02 UTC
Repro steps:

1) Open your favorite Sidebar containing LO program (Writer, Calc, Impress or Draw)
2) Show the Sidebar (Menu > View > Sidebar or Ctrl+F5)
3) Click on any deck tab button in the Sidebar tab bar
4) If needed click on the tab button again to collapse the deck
Focus is on tab button and deck is not visible
5) Press arrow keys until first tab button (Menu tab) or last tab button (Navigator tab) has focus
6) If focus is on Menu tab press up or left arrow key. If focus Navigator tab press down or right arrow key.

Results: Focus is hid in deck

Expected Results: Deck opens when focus is set in deck contents
Comment 1 Xisco Faulí 2018-08-29 08:54:53 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: a922f56cbf25f78534cd2d36bf13a86a4f15d970
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: el-GR (ca_ES.UTF-8); Calc: threaded

if I keep hitting down arrow, eventually the focus moves to the top, making it circular. is it not the expected behaviour?

BTW, the arrow keys started to work after https://cgit.freedesktop.org/libreoffice/core/commit/?id=a8605dc1619a2275b52e22a60c4ca0715e7ab07d
Comment 2 Jim Raykowski 2018-08-29 11:34:14 UTC
(In reply to Xisco Faulí from comment #1)
> 
> if I keep hitting down arrow, eventually the focus moves to the top, making
> it circular. is it not the expected behaviour?
> 
The deck is still open even though it isn't visible and repeated arrow key presses move focus through each panel title in the deck until eventually circulating back to the tab bar.
But when the deck content isn't visible this doesn't seem to me like good UI to have to repeatedly press arrow keys until focus appears again.
I initially made a patch that skipped the panel(s) focus when the deck isn't visible just circulating through the tab bar but am more in favour of showing the deck when focus enters collapsed deck content and made a patch to do this.

More input is welcomed.
Comment 3 Xisco Faulí 2018-08-29 11:44:24 UTC
oh, I understand now why it needs some hits before moving the focus to the top. Before I didn't try with the sidebar displayed.
Yep, it would be nice not to iterate through the subpanels if the sidebar is collapsed...
Comment 4 Jim Raykowski 2018-08-30 22:44:29 UTC
Here is a patch that opens the deck when this happens:

https://gerrit.libreoffice.org/#/c/59843/
Comment 5 Commit Notification 2018-09-05 09:28:40 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a14088e2822f6018f19677705a74d2f37d0d0431

tdf#119570 Show deck when focus is moved to panel in collapsed deck

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.