tdf#119570 Show deck when focus is moved to panel in collapsed deck

Change-Id: Ifebc5802607d66cb32be2e0f51952ca4d5cb32bc
Reviewed-on: https://gerrit.libreoffice.org/59843
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>